--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-material-source",
+  "name": "angular-material",
   "version": "1.1.18",
   "description": "The AngularJS Material project is an implementation of Material Design in AngularJS. This project provides a set of reusable, well-tested, and accessible Material Design UI components. AngularJS Material is supported internally at Google by the AngularJS, Material Design UX and other product teams.",
   "keywords": [
@@ -28,6 +28,10 @@
     "url": "git://github.com/angular/material.git"
   },
   "private": true,
+  "main": "./dist/angular-material.js",
+  "files": [
+    "/dist"
+  ],
   "style": "./dist/angular-material.css",
   "scss": "./dist/angular-material.scss",
   "dependencies": {},
